--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -8,7 +8,9 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = ">=3.10,<3.12"
 uagents = "^0.9.3"
-
+flask = {extras = ["async"], version = "^3.0.2"}
+flask-socketio = "^5.3.6"
+python-socketio = {extras = ["asyncio-client"], version = "^5.11.0"}
 
 [build-system]
 requires = ["poetry-core"]
