--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -12,6 +12,9 @@ flask = {extras = ["async"], version = "^3.0.2"}
 flask-socketio = "^5.3.6"
 python-socketio = {extras = ["asyncio-client"], version = "^5.11.0"}
 eventlet = "^0.35.1"
+langchain = "^0.1.5"
+langchain-experimental = "^0.0.50"
+langchain-community = "^0.0.19"
 
 [build-system]
 requires = ["poetry-core"]
