--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,12 @@
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
     "@tabler/icons": "^2.47.0",
+    "chart.js": "^4.4.1",
+    "chartjs": "^0.3.24",
     "next": "14.1.0",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
+    "react-chat-elements": "^12.0.11",
     "react-dom": "^18",
     "socket.io-client": "^4.7.4"
   },
